--- a/css/main.css
+++ b/css/main.css
@@ -1336,25 +1336,28 @@ textarea.contacts__form-item_css-validate:valid {
         footer
 -------------------- */
 .footer {
-  height: 21.8rem;
   background-color: #242424;
 }
 
 .footer__content {
+  padding-top: 6.4rem;
+  padding-bottom: 6.4rem;
+
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
 
-  height: 100%;
+  min-height: 21.8rem;
   position: relative;
 }
 
-.footer__logo-link {
-  position: absolute;
-  top: 50%;
-  left: 32px;
-  transform: translateY(-50%);
+.footer__links {
+  display: flex;
+  width: 100%;
+}
 
+.footer__logo-link {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1392,14 +1395,25 @@ textarea.contacts__form-item_css-validate:valid {
   transition-delay: 0s;
 }
 
+.footer__list-wrapper {
+  margin: 0 80px 0 0;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
 .footer__list {
   margin: 0;
   padding: 0;
+
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  list-style: none;
+
   width: 24rem;
-  margin: 6.4rem 0 3.2rem;
+
+  list-style: none;
+  /* margin: 6.4rem 0 3.2rem; */
 }
 
 .footer__list-item {
@@ -1435,7 +1449,51 @@ textarea.contacts__form-item_css-validate:valid {
   color: #fff;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
 }
+
+@media screen and (max-width: 992px) {
+  .footer__content {
+    padding-top: 5.4rem;
+    padding-bottom: 5.4rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__content {
+    padding-top: 4.4rem;
+    padding-bottom: 4.4rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .footer__content {
+    padding-top: 3.2rem;
+    padding-bottom: 3.2rem;
+  }
+
+  .footer__links {
+    align-items: center;
+  }
+
+  .footer__list-wrapper {
+    margin: 0;
+  }
+
+  .footer__list {
+    width: 11.2rem;
+  }
+
+  .footer__list-item:nth-last-of-type(n + 3) {
+    margin-bottom: 1.2rem;
+  }
+
+  .footer__copy {
+    margin: 3.2rem 0 0;
+  }
+}
+
+
 
 /* --------------------
     scroll-to-top
