--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,7 @@ body {
   z-index: 1000;
   background-color: #fff;
   box-shadow: 0 4px 11px rgba(0, 0, 0, 0.05);
+  transition: height .75s ease-out;
 }
 
 .header__content {
@@ -158,7 +159,7 @@ body {
 .header__logo-link {
   width: 56px;
   position: absolute;
-  top: 50%;
+  top: 45px;
   left: 32px;
   transform: translateY(-50%);
   text-decoration: none;
@@ -185,7 +186,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 64px;
+  margin: 0 64px 0 104px;
+  padding: 0;
   width: 100%;
   max-width: 800px;
   height: 100%;
@@ -210,9 +212,6 @@ body {
   color: inherit;
   position: relative;
   overflow: hidden;
-}
-
-.header__link:focus {
   outline: none;
 }
 
@@ -244,7 +243,7 @@ body {
 
 .header__link.header__link_not-active::after {
   width: 40% !important;
-  bottom: -5px !important;
+  bottom: 0px !important;
   left: 30% !important;
   background-color: #242424 !important;
 }
@@ -260,7 +259,7 @@ body {
 
 .header__ham {
   position: absolute;
-  top: 50%;
+  top: 45px;
   right: 32px;
   transform: translateY(-50%);
 
@@ -300,23 +299,31 @@ body {
   bottom: 0;
 }
 
-.header__ham-close .header__ham-line {
+.header_opened-ham {
+  height: 100vh;
+}
+
+.header_opened-ham .header__list {
+  display: flex;
+}
+
+.header_opened-ham .header__ham-line {
   transition-property: transform, width, top, bottom;
   transition-duration: .25s, 0s, .25s, .25s;
   transition-delay: .25s, .25s, 0s, 0s;
   transition-timing-function: ease-out;
 }
 
-.header__ham-close .header__ham-line:nth-child(1)  {
+.header_opened-ham .header__ham-line:nth-child(1)  {
   top: 40%;
   transform: rotate(45deg);
 }
 
-.header__ham-close .header__ham-line:nth-child(2)  {
+.header_opened-ham .header__ham-line:nth-child(2)  {
   width: 0;
 }
 
-.header__ham-close .header__ham-line:nth-child(3)  {
+.header_opened-ham .header__ham-line:nth-child(3)  {
   bottom: 40%;
   transform: rotate(-45deg);
 }
@@ -324,6 +331,97 @@ body {
 @media screen and (max-width: 992px) {
   .header__list {
     display: none;
+    box-sizing: border-box;
+    padding-top: 90px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0;
+  }
+
+  .header__list-item {
+    max-height: 90px;
+    width: 100%;
+  
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    position: relative;
+    right: -75%;
+    opacity: 0;
+    transition-property: right, opacity;
+    transition-duration: .5s;
+  }
+
+  .header__list-item-shown {
+    right: 0;
+    opacity: 1;
+  }
+
+  .header__list-item + .header__list-item {
+    margin: 0;
+  }
+
+  .header__link {
+    padding-right: 20px;
+  }
+
+  .header__link::after {
+    bottom: auto;
+    left: auto;
+    right: 0px;
+    border-radius: 5px 0 0 5px;
+    
+    width: 0px;
+    top: 40%;
+    height: 20%;
+    background-color: #242424;
+    
+    transition-property: height, top, width, background-color;
+    transition-timing-function: ease-out, ease-out, ease-out, ease-out;
+    transition-duration: .1s, .1s, .1s, .1s;
+    transition-delay: .1s, .1s, 0s, .1s;
+  }
+
+  .header__link:focus::after,
+  .header__link:hover::after,
+  .header__link.header__link_pre-active::after {
+    bottom: auto;
+    left: auto;
+    right: 0px;
+
+    width: 3px;
+    top: 40%;
+    height: 20%;
+    background-color: #242424;
+    
+    transition-delay: .2s, .2s, 0s, .2s;
+    transition-timing-function: ease-in, ease-in, ease-in, ease-in;
+  }
+
+  .header__link.header__link_not-active::after {
+    bottom: auto !important;
+    left: auto !important;
+    right: 0px !important;
+
+    width: 0px !important;
+    top: 40% !important;
+    height: 20%  !important;
+    background-color: #242424  !important;
+  }
+
+  .header__link.header__link_active::after {
+    bottom: auto;
+    left: auto;
+    right: 0px;
+
+    height: 60%;
+    top: 20%;
+    width: 5px;
+    background-color: #2998FF;
+    transition-delay: 0s, 0s, .2s, 0s;
+    transition-timing-function: ease-in, ease-in, ease-in, ease-in;
   }
 
   .header__ham {
