--- a/css/main.css
+++ b/css/main.css
@@ -1329,8 +1329,8 @@ textarea.contacts__form-item_css-validate:valid {
   transition-timing-function: ease, ease, ease-out;
 }
 
-.form__submit:not(.form__submit_sent,.form__submit.form__submit_sending):focus,
-.form__submit:not(.form__submit_sent,.form__submit.form__submit_sending):hover {
+.form__submit:not(.form__submit_sent,.form__submit_fail,.form__submit_sending):focus,
+.form__submit:not(.form__submit_sent,.form__submit_fail,.form__submit_sending):hover {
   background-color: #00509A;
   transition-delay:    0s,          0s,            0s;
 }
