--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ html {
   font-family: 'Rubik', sans-serif;
   font-size: 62.5%;
   color: #242424;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -137,309 +137,6 @@ picture img {
 .button:hover {
   background-color: #00509A;
   transition-delay: 0s;
-}
-
-/* --------------------
-        header
--------------------- */
-.header {
-  height: 90px;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  background-color: #fff;
-  box-shadow: 0 4px 11px rgba(0, 0, 0, 0.05);
-  transition: height .65s cubic-bezier(.34,.06,.2,1);
-}
-
-.header__content {
-  height: 100%;
-  max-width: 1120px;
-  margin: 0 auto;
-  position: relative;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.header__logo-link {
-  width: 56px;
-  position: absolute;
-  top: 45px;
-  left: 32px;
-  transform: translateY(-50%);
-  text-decoration: none;
-}
-
-.header__logo-link:focus {
-  outline: none;
-}
-
-.header__logo {
-  fill: #2998FF;
-  width: 100%;
-  transition: fill .25s .1s;
-}
-
-.header__logo-link:focus .header__logo,
-.header__logo-link:hover .header__logo {
-  fill: #00509A;
-  transition-delay: 0s;
-}
-
-.header__list {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 64px 0 104px;
-  padding: 0;
-  width: 100%;
-  max-width: 800px;
-  height: 100%;
-}
-
-.header__list-item + .header__list-item {
-  margin-left: 1.5em;
-}
-
-.header__list-item {
-  height: 100%;
-}
-
-.header__link {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  font-size: 2.4rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: inherit;
-  position: relative;
-  overflow: hidden;
-  outline: none;
-}
-
-.header__link::after {
-  content: "";
-  position: absolute;
-  bottom: 0px;
-  border-radius: 5px 5px 0 0;
-  
-  width: 40%;
-  left: 30%;
-  height: 0px;
-  background-color: #242424;
-  
-  transition-property: width, left, height, background-color;
-  transition-timing-function: ease-out, ease-out, ease-out, ease-out;
-  transition-duration: .1s, .1s, .1s, .1s;
-  transition-delay: .1s, .1s, 0s, .1s;
-}
-
-.header__link:focus::after,
-.header__link:hover::after,
-.header__link.header__link_pre-active::after {
-  height: 3px;
-  
-  transition-delay: .2s, .2s, 0s, .2s;
-  transition-timing-function: ease-in, ease-in, ease-in, ease-in;
-}
-
-.header__link.header__link_not-active::after {
-  width: 40% !important;
-  bottom: 0px !important;
-  left: 30% !important;
-  background-color: #242424 !important;
-}
-
-.header__link.header__link_active::after {
-  width: 90%;
-  left: 5%;
-  height: 5px;
-  background-color: #2998FF;
-  transition-delay: 0s, 0s, .2s, 0s;
-  transition-timing-function: ease-in, ease-in, ease-in, ease-in;
-}
-
-.header__ham {
-  position: absolute;
-  top: 45px;
-  right: 32px;
-  transform: translateY(-50%);
-
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  box-sizing: content-box;
-  height: 26px;
-  width: 42px;
-  margin: 0;
-  padding: 19px 11px;
-
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  outline-color: #242424;
-}
-
-.header__ham-line {
-  position: relative;
-  width: 100%;
-  height: 20%;
-  background-color: #242424;
-  transition-property: transform, width, top, bottom;
-  transition-duration: .25s, 0s, .25s, .25s;
-  transition-delay: 0s, .25s, .25s, .25s;
-  transition-timing-function: ease-out;
-}
-
-.header__ham-line:nth-child(1) {
-  top: 0;
-}
-
-.header__ham-line:nth-child(3) {
-  bottom: 0;
-}
-
-.header_opened-ham {
-  height: 100vh;
-}
-
-.header_opened-ham .header__list {
-  display: flex;
-}
-
-.header_opened-ham .header__ham-line {
-  transition-property: transform, width, top, bottom;
-  transition-duration: .25s, 0s, .25s, .25s;
-  transition-delay: .25s, .25s, 0s, 0s;
-  transition-timing-function: ease-out;
-}
-
-.header_opened-ham .header__ham-line:nth-child(1)  {
-  top: 40%;
-  transform: rotate(45deg);
-}
-
-.header_opened-ham .header__ham-line:nth-child(2)  {
-  width: 0;
-}
-
-.header_opened-ham .header__ham-line:nth-child(3)  {
-  bottom: 40%;
-  transform: rotate(-45deg);
-}
-
-@media screen and (max-width: 1024px) {
-  .header__list {
-    display: none;
-    box-sizing: border-box;
-    padding-top: 90px;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0;
-  }
-
-  .header__list-item {
-    max-height: 90px;
-    width: 100%;
-  
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-
-    position: relative;
-    right: -75%;
-    opacity: 0;
-    transition-property: right, opacity;
-    transition-duration: .5s;
-  }
-
-  .header__list-item-shown {
-    right: 0;
-    opacity: 1;
-  }
-
-  .header__list-item + .header__list-item {
-    margin: 0;
-  }
-
-  .header__link {
-    padding-right: 20px;
-  }
-
-  .header__link::after {
-    bottom: auto;
-    left: auto;
-    right: 0px;
-    border-radius: 5px 0 0 5px;
-    
-    width: 0px;
-    top: 40%;
-    height: 20%;
-    background-color: #242424;
-    
-    transition-property: height, top, width, background-color;
-    transition-timing-function: ease-out, ease-out, ease-out, ease-out;
-    transition-duration: .1s, .1s, .1s, .1s;
-    transition-delay: .1s, .1s, 0s, .1s;
-  }
-
-  .header__link:focus::after,
-  .header__link:hover::after,
-  .header__link.header__link_pre-active::after {
-    bottom: auto;
-    left: auto;
-    right: 0px;
-
-    width: 3px;
-    top: 40%;
-    height: 20%;
-    background-color: #242424;
-    
-    transition-delay: .2s, .2s, 0s, .2s;
-    transition-timing-function: ease-in, ease-in, ease-in, ease-in;
-  }
-
-  .header__link.header__link_not-active::after {
-    bottom: auto !important;
-    left: auto !important;
-    right: 0px !important;
-
-    width: 0px !important;
-    top: 40% !important;
-    height: 20%  !important;
-    background-color: #242424  !important;
-  }
-
-  .header__link.header__link_active::after {
-    bottom: auto;
-    left: auto;
-    right: 0px;
-
-    height: 60%;
-    top: 20%;
-    width: 5px;
-    background-color: #2998FF;
-    transition-delay: 0s, 0s, .2s, 0s;
-    transition-timing-function: ease-in, ease-in, ease-in, ease-in;
-  }
-
-  .header__ham {
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  
 }
 
 
