--- a/css/projects.css
+++ b/css/projects.css
@@ -150,14 +150,20 @@
          main
 -------------------- */
 main {
+  position: relative;
   padding-top: 170px;
   padding-bottom: 94px;
-  background-image: url("../img/projects-background.jpg");
-  background-position: center top;
-  background-size: cover;
-  /* background-attachment: fixed; */
-  background-repeat: no-repeat;
+}
+
+.projects__background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: auto;
+  width: 100%;
+  z-index: -1;
   background-color: #2998FF;
+  transition: top .4s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
 .projects__header {
