--- a/css/projects.css
+++ b/css/projects.css
@@ -150,6 +150,7 @@
          main
 -------------------- */
 main {
+  min-height: 100vh;
   position: relative;
   padding-top: 170px;
   padding-bottom: 94px;
@@ -158,12 +159,14 @@ main {
 .projects__background-image {
   position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   height: auto;
   width: 100%;
+  object-fit: cover;
+  object-position: top right;
   z-index: -1;
   background-color: #2998FF;
-  transition: top .4s cubic-bezier(0.25, 1, 0.5, 1);
+  transition: top .5s cubic-bezier(0.25, 1, 0.5, 1);
 }
 
 .projects__header {
@@ -204,6 +207,7 @@ main {
 
 .project-card__image {
   width: 100%;
+  height: 300px;
   box-sizing: border-box;
   border: 1px solid #BEBEBE;
   border-radius: 16px;
@@ -246,6 +250,10 @@ main {
 }
 
 @media screen and (max-width: 768px) {
+  .project-card__image {
+    height: 200px;
+  }
+
   .project-card__title {
     font-size: 2rem;
   }
@@ -269,6 +277,10 @@ main {
     margin-bottom: 1.6rem;
   }
 
+  .project-card__image {
+    height: 250px;
+  }
+
   .project-card__title {
     font-size: 1.9rem;
     min-height: auto;
@@ -280,6 +292,12 @@ main {
 
   .project-card__button {
     font-size: 1.6rem;
+  }
+}
+
+@media screen and (max-width: 335px) {
+  .project-card__image {
+    height: 200px;
   }
 }
 
